# Kosmiq

./: .gitignore  docker-compose.yml  hello.html  package-lock.json  test_output.txt
.agents/rules/: KOSMIQ.md  ROUTES.md
.agents/skills/graphify-out/: .graphify_root  GRAPH_REPORT.md  graph.html  graph.json
.agents/workflows/: api-connect.md  launch-check.md  new-component.md  pre-commit.md
apps/astro-engine/: Dockerfile  create_tables.py  main.py  pyproject.toml  test_response.json
apps/astro-engine/engine/: ai_synthesis.py  astro_score.py  calculator.py  compatibility.py  constants.py  dasha.py  db.py  divisional.py  flags.py  shadbala.py  synastry.py  transits.py  yogas.py
apps/astro-engine/graphify-out/: graph.html  graph.json
apps/astro-engine/tests/: test_calculator.py  test_dasha.py  test_flags.py  test_transits.py  test_yogas.py
apps/web/: Dockerfile  drizzle.config.ts  next.config.ts  package-lock.json  package.json
apps/web/actions/: calculate.ts  location.ts
apps/web/drizzle/: 0000_aspiring_sinister_six.sql
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/backend/: .graphify_ast.json  .graphify_detect.json  .graphify_semantic.json  GRAPH_REPORT.md  graph.json
graphify-out/frontend/: .graphify_ast.json  .graphify_detect.json  .graphify_semantic.json  GRAPH_REPORT.md  graph.html
scratch/: list_models_to_file.py  test_bridge.py  test_bridge.ts  test_bridge_9223.py  test_bridge_9223.ts  test_gemini.py
src/db/: schema.ts
(+119 files in other folders)
