[project]
name = "astro-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "pyswisseph",
    "pydantic",
    "python-dateutil",
    "google-genai>=1.74.0",
    "langgraph>=1.1.10",
    "python-dotenv>=1.2.2",
]
